ws_controller/log/build_2025-08-22_12-17-50/flight_controller_pkg/stdout_stderr.log
running egg_info
writing ../../build/flight_controller_pkg/flight_controller_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/flight_controller_pkg/flight_controller_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/flight_controller_pkg/flight_controller_pkg.egg-info/entry_points.txt
writing requirements to ../../build/flight_controller_pkg/flight_controller_pkg.egg-info/requires.txt
writing top-level names to ../../build/flight_controller_pkg/flight_controller_pkg.egg-info/top_level.txt
reading manifest file '../../build/flight_controller_pkg/flight_controller_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/flight_controller_pkg/flight_controller_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying flight_controller_pkg/fc_control.py -> /home/dron/ws_controller/build/flight_controller_pkg/build/lib/flight_controller_pkg
running install
running install_lib
copying /home/dron/ws_controller/build/flight_controller_pkg/build/lib/flight_controller_pkg/fc_control.py -> /home/dron/ws_controller/install/flight_controller_pkg/lib/python3.10/site-packages/flight_controller_pkg
byte-compiling /home/dron/ws_controller/install/flight_controller_pkg/lib/python3.10/site-packages/flight_controller_pkg/fc_control.py to fc_control.cpython-310.pyc
  File "/home/dron/ws_controller/install/flight_controller_pkg/lib/python3.10/site-packages/flight_controller_pkg/fc_control.py", line 490
    msg = self.master.recv_match(type='HEARTBEAT', blocking=Falsetimeout=timeout)
                                                                        ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/dron/ws_controller/install/flight_controller_pkg/lib/python3.10/site-packages/flight_controller_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/flight_controller_pkg/flight_controller_pkg.egg-info to /home/dron/ws_controller/install/flight_controller_pkg/lib/python3.10/site-packages/flight_controller_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing fc_controller script to /home/dron/ws_controller/install/flight_controller_pkg/lib/flight_controller_pkg
writing list of installed files to '/home/dron/ws_controller/build/flight_controller_pkg/install.log'
